--- a/48_시계만들기.html
+++ b/48_시계만들기.html
@@ -31,6 +31,6 @@
       }
     </script>
     <button onclick="startClock()">시작</button>
-    <button onclick="stopClock()">중지</button>//
+    <button onclick="stopClock()">중지</button>
   </body>
 </html>
