--- a/57_이벤트객체.html
+++ b/57_이벤트객체.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>이벤트 객체체</title>
+    <title>이벤트 객체</title>
     <style>
       #clickArea {
         width: 300px;
