--- a/66_cookie.html
+++ b/66_cookie.html
@@ -28,6 +28,18 @@
         // console.log(expires);
         document.cookie = `${name}=${value}; ${expires}; path=/`;
       }
+
+      // 쿠키 읽기 함수
+      function getCookie(name) {
+        const decodedCookie = decodeURIComponent(document.cookie);
+        const cookies = decodedCookie.split("; ");
+        for (let cookie of cookies) {
+          const [key, value] = cookie.split("=");
+          if (key === name) return value;
+        }
+        return null;
+      }
+
       // 팝업 닫기
       function closePopup() {
         const checkbox = document.getElementById("hideToday");
@@ -37,6 +49,12 @@
         }
         document.getElementById("popup").style.display = "none";
       }
+
+      window.onload = function () {
+        if (getCookie("hidePopup") === "true") {
+          document.getElementById("popup").style.display = "none";
+        }
+      };
     </script>
   </body>
 </html>
