--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>로드킬 사고 다발지역</title>
     <script
       type="text/javascript"
-      src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=66029665391fbbd3e428b26e1daa98d4"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=66029665391fbbd3e428b26e1daa98d4"
     ></script>
     <style>
       body {
