--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
     <script>
       let map;
       let marker;
-
+      const serviceKey =
+        "TOzUiqu+esY3FMU5yuNsX3HGY9eJGn8mgBw0fxraR+Lep2aB5Hf6DQ1cQNp47xuIrGxGZNv0Qx2EyE1tshrcQQ==";
       function initMap() {
         const container = document.getElementById("map");
         const options = {
