--- a/index.html
+++ b/index.html
@@ -2,55 +2,9 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>로드킬 사고 다발지역</title>
-    <script
-      type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=66029665391fbbd3e428b26e1daa98d4"
-    ></script>
-    <style>
-      body {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        margin: 0;
-        font-family: Arial, sans-serif;
-      }
-      #controls {
-        text-align: center;
-        margin-bottom: 20px;
-      }
-      #region {
-        width: 200px;
-        height: 40px;
-        font-size: 16px;
-        padding: 5px;
-        border-radius: 5px;
-        border: 1px solid #ccc;
-      }
-      button {
-        width: 120px;
-        height: 40px;
-        font-size: 16px;
-        margin-left: 10px;
-        border: none;
-        background-color: #007bff;
-        color: white;
-        cursor: pointer;
-        border-radius: 5px;
-      }
-      button:hover {
-        background-color: #0056b3;
-      }
-      #map {
-        width: 500px;
-        height: 400px;
-        border: 2px solid #ccc;
-        border-radius: 10px;
-      }
-    </style>
+    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=66029665391fbbd3e428b26e1daa98d4"></script>
+    <script src="index.js" defer></script>
   </head>
   <body>
     <div id="controls">
@@ -61,56 +15,10 @@
         <option value="강원">강원</option>
         <option value="충북">충북</option>
         <option value="대전충남">대전충남</option>
+        <button onclick="loadData()">조회하기</button>
       </select>
       <button onclick="moveMap()">조회하기</button>
     </div>
-    <div id="map"></div>
-
-    <script>
-      let map;
-      let marker;
-      const serviceKey =
-        "TOzUiqu+esY3FMU5yuNsX3HGY9eJGn8mgBw0fxraR+Lep2aB5Hf6DQ1cQNp47xuIrGxGZNv0Qx2EyE1tshrcQQ==";
-      function initMap() {
-        const container = document.getElementById("map");
-        const options = {
-          center: new kakao.maps.LatLng(37.5665, 126.978), // 서울 중심
-          level: 9,
-        };
-        map = new kakao.maps.Map(container, options);
-      }
-
-      const locations = {
-        서울경기: { lat: 37.5665, lng: 126.978 },
-        강원: { lat: 37.8854, lng: 127.7298 },
-        충북: { lat: 36.6357, lng: 127.4914 },
-        대전충남: { lat: 36.3504, lng: 127.3845 },
-      };
-
-      function moveMap() {
-        const selectedRegion = document.getElementById("region").value;
-        const location = locations[selectedRegion];
-
-        if (location) {
-          const coords = new kakao.maps.LatLng(location.lat, location.lng);
-          map.setCenter(coords);
-
-          if (marker) marker.setMap(null);
-
-          marker = new kakao.maps.Marker({
-            map: map,
-            position: coords,
-          });
-
-          marker.setAnimation(kakao.maps.Animation.BOUNCE);
-        } else {
-          console.warn("잘못된 지역 선택:", selectedRegion);
-        }
-      }
-
-      window.onload = function () {
-        initMap();
-      };
-    </script>
+    <div id="map" style="width: 600px; height: 450px"></div>
   </body>
 </html>
